2019/DOP_clusterization_2019/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                  - poll
            topologyKey: "poll"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                topologyKey: "out"
      restartPolicy: Always
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: port
          containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
