2019/DOP_clusterization_2019/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  labels:
    app: poll
spec:
  type: ClusterIP
  selector:
      app: poll
  ports:
  - name: port
    port: 80
    targetPort: 80
