2019/DOP_clusterization_2019/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port : 5432
      targetPort: 5432
