2019/DOP_clusterization_2019/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
      app: redis
  type: ClusterIP
  ports:
  - name: port
    port: 6379
    targetPort: 6379
