2019/DOP_clusterization_2019/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: ClusterIP
  selector:
      app: result
  ports:
  - name: port
    port: 80
    targetPort: 80
