2019/DOP_clusterization_2019/poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    poll.dop.io: /
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
        - path: /
          backend:
            serviceName: poll
            servicePort: 80
