2019/DOP_clusterization_2019/result.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    result.dop.io: /
spec:
  rules:
    - host: result.dop.io
      http:
        paths:
        - path: /
          backend:
            serviceName: result
            servicePort: 80
